# corin

./: .agent.md  .cora.yaml  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  cora-review.yml  release.yml
docs/: architecture.md  mcp-integration.md  roadmap.md
docs/plans/: remote-connection-manager.md
scripts/: build-updater-manifest.ts
src/: App.svelte  app.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  kanban_client.rs  lib.rs  main.rs  uteke_adapter.rs  uteke_client.rs
src-tauri/src/connections/: mod.rs  store.rs  traits.rs
src-tauri/src/connections/adapters/: mod.rs  uteke.rs
src/lib/: transitions.ts
src/lib/components/: ConnectionManager.svelte  Dashboard.svelte  DetailPanel.svelte  DocumentsView.svelte  GraphView.svelte  ImportExport.svelte  KanbanCard.svelte  KanbanCreateModal.svelte  KanbanDrawer.svelte  KanbanView.svelte  MemoryDetail.svelte  MemoryEditor.svelte  MemoryList.svelte  NamespaceFilter.svelte  NamespacesView.svelte  RoomsView.svelte  SettingsModal.svelte  SettingsView.svelte  Sidebar.svelte
src/lib/stores/: cache.svelte.ts  connections.svelte.ts  memories.svelte.ts  nav.ts  pagination.svelte.ts  ui.svelte.ts
src/lib/ts/: ipc.ts  types.ts
src/lib/ui/: Badge.svelte  Badge.test.ts  Button.svelte  Button.test.ts  Card.svelte  ConfirmDialog.svelte  index.ts  (+10 more)
(+13 files in other folders)
