[package]
name = "codecora-hub"
version = "0.1.0"
edition = "2024"
description = "Codecora Hub — Desktop knowledge workstation powered by Uteke"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
nanoid = "0.5"
chrono = "0.4"

[dev-dependencies]
