[package]
name = "corin"
version = "0.1.0"
edition = "2024"
description = "CorIn — Cora Intelligence. Desktop knowledge workstation."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.40", features = ["bundled"] }
nanoid = "0.5"
chrono = "0.4"
dirs = "6"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
